Project jobnative_digital {
  database_type: "PostgreSQL"
}

Enum company_status {
  pending
  approved
  rejected
}

Enum event_status {
  pending
  approved
  rejected
}


Enum dashboard_column {
  todo
  contacted
  favourite
}

Enum user_role {
  user
  admin
}

Table users {
  id serial [pk]
  name varchar(200) [not null]
  email varchar(320) [not null, unique]
  password_hash varchar(255) [not null, note: "Store only password hash (bcrypt/argon2), never plaintext"]
  role user_role [not null, default: "user"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    (email) [unique]
    (created_at)
  }
}

Table companies {
  id serial [pk]
  name varchar(255) [not null]
  website varchar(2048) [not null, unique]
  linkedin varchar(2048) [unique]
  industry varchar(120)
  location varchar(120)
  description text
  status company_status [not null, default: "pending"]
  created_by_user_id int
  created_at timestamptz [not null, default: `now()`]
  approved_by_user_id int
  approved_at timestamptz

  Indexes {
    (status)
    (name)
    (location)
    (website) [unique]
  }
}

Table events {
  id serial [pk]
  name varchar(255) [not null]
  company_id int 
  website varchar(2048) [unique]
  location varchar(120)
  start_time timestampz [not null]
  end_time timestampz 
  description text
  status event_status [not null, default: "pending"]
  created_by_user_id int
  created_at timestamptz [not null, default: `now()`]
  approved_by_user_id int
  approved_at timestamptz

  Indexes {
    (status)
    (name)
    (location)
  }
}

Table event_technologies {
  event_id int [not null]
  technology_id int [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (event_id, technology_id) [pk]
    (technology_id)
  }
}

Table event_sponsors {
  event_id int [not null]
  company_id int [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (event_id, company_id) [pk]
    (company_id)
  }
}

Table comments {
  id serial [pk]
  company_id int [not null]
  user_id int [not null]
  body text [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    (company_id)
    (user_id)
    (created_at)
  }
}

Table user_company_states {
  user_id int [not null]
  company_id int [not null]
  dashboard_column dashboard_column [not null, default: "todo"]
  personal_notes text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: "Per-user saved state for each company card (Favourites / Contacted / To do) + private notes"

  Indexes {
    (user_id, company_id) [pk]
    (user_id, dashboard_column)
    (company_id)
  }
}

Table auth_refresh_tokens {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id int [not null]
  token_hash varchar(255) [not null, unique]
  user_agent varchar(512)
  ip_address varchar(64)
  expires_at timestamptz [not null]
  revoked_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  Note: "Optional if using stateless access JWT + refresh-token rotation"

  Indexes {
    (token_hash) [unique]
    (user_id)
    (expires_at)
  }
}

Table technologies {
  id serial [pk]
  name varchar(60) [not null, unique]
  slug varchar(60) [not null, unique]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (name) [unique]
    (slug) [unique]
  }
}

Table company_technologies {
  company_id int [not null]
  technology_id int [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (company_id, technology_id) [pk]
    (technology_id)
  }
}

Table job_roles {
  id serial [pk]
  name varchar(60) [not null, unique]
  slug varchar(60) [not null, unique]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (name) [unique]
    (slug) [unique]
  }
}

Table company_job_roles {
  company_id int [not null]
  job_role_id int [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (company_id, job_role_id) [pk]
    (job_role_id)
  }
}

Ref: companies.created_by_user_id > users.id [delete: set null]
Ref: companies.approved_by_user_id > users.id [delete: set null]

Ref: comments.company_id > companies.id [delete: cascade]
Ref: comments.user_id > users.id [delete: cascade]

Ref: user_company_states.company_id > companies.id [delete: cascade]
Ref: user_company_states.user_id > users.id [delete: cascade]

Ref: auth_refresh_tokens.user_id > users.id [delete: cascade]

Ref: company_technologies.company_id > companies.id [delete: cascade]
Ref: company_technologies.technology_id > technologies.id [delete: cascade]

Ref: company_job_roles.company_id > companies.id [delete: cascade]
Ref: company_job_roles.job_role_id > job_roles.id [delete: cascade]

Ref: events.created_by_user_id > users.id [delete: set null]
Ref: events.approved_by_user_id > users.id [delete: set null]

Ref: event_technologies.event_id > events.id [delete: cascade]
Ref: event_technologies.technology_id > technologies.id [delete: cascade]

Ref: event_sponsors.event_id > events.id [delete: cascade]
Ref: event_sponsors.company_id > companies.id [delete: cascade]

